--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <properties>
         <!-- Versions for required dependencies -->
         <dropwizard.version>2.0.14</dropwizard.version>
+        <kiwi.version>0.13.0</kiwi.version>
 
         <!-- Versions for provided dependencies -->
 
@@ -55,6 +56,12 @@
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-client</artifactId>
             <version>${dropwizard.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.kiwiproject</groupId>
+            <artifactId>kiwi</artifactId>
+            <version>${kiwi.version}</version>
         </dependency>
 
         <!-- provided dependencies -->
