--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <jersey.version>2.32</jersey.version>
         <kiwi.version>0.13.0</kiwi.version>
         <metrics-health-severity.version>0.10.1</metrics-health-severity.version>
+        <metrics-jetty9>4.1.14</metrics-jetty9>
         <metrics-servlets.version>4.1.14</metrics-servlets.version>
 
         <!-- Versions for provided dependencies -->
@@ -147,6 +148,18 @@
             <groupId>org.kiwiproject</groupId>
             <artifactId>metrics-healthchecks-severity</artifactId>
             <version>${metrics-health-severity.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-jetty9</artifactId>
+            <version>${metrics-jetty9}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-server</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
