--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
         <hibernate-validator.version>6.1.6.Final</hibernate-validator.version>
         <jackson.version>2.10.5</jackson.version>
         <jersey.version>2.32</jersey.version>
-        <kiwi.version>0.13.0</kiwi.version>
-        <metrics-health-severity.version>0.10.1</metrics-health-severity.version>
+        <kiwi.version>0.14.0</kiwi.version>
+        <metrics-healthchecks-severity.version>0.11.0</metrics-healthchecks-severity.version>
         <metrics-jetty9>4.1.14</metrics-jetty9>
         <metrics-servlets.version>4.1.14</metrics-servlets.version>
 
@@ -42,7 +42,7 @@
         <!-- Versions for optional dependencies -->
 
         <!-- Versions for test dependencies -->
-        <kiwi-test.version>0.8.0</kiwi-test.version>
+        <kiwi-test.version>0.9.0</kiwi-test.version>
 
         <!-- Versions for plugins -->
 
@@ -147,7 +147,7 @@
         <dependency>
             <groupId>org.kiwiproject</groupId>
             <artifactId>metrics-healthchecks-severity</artifactId>
-            <version>${metrics-health-severity.version}</version>
+            <version>${metrics-healthchecks-severity.version}</version>
         </dependency>
 
         <dependency>
