Switch from TravisCI to GitHub Actions for the build
* Add SONAR_TOKEN as repository secret (via GitHub web UI)
* Add build.yml
* Add Sonar properties to the POM
* Rename .travis.yml to .travis.yml.deleteme (eventually we'll delete)
* Replace TravisCI build badge with GitHub actions badge

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
         <!-- Versions for plugins -->
 
         <!-- Build properties -->
+
+        <!-- Sonar properties -->
+        <sonar.projectKey>kiwiproject_dropwizard-client-poller</sonar.projectKey>
+        <sonar.organization>kiwiproject</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
