--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,9 @@
         <jersey.version>2.33</jersey.version>
         <kiwi.version>0.25.0</kiwi.version>
         <metrics-healthchecks-severity.version>0.22.0</metrics-healthchecks-severity.version>
-        <metrics-jersey2>4.1.23</metrics-jersey2>
-        <metrics-jetty9>4.1.23</metrics-jetty9>
-        <metrics-servlets.version>4.1.23</metrics-servlets.version>
+        <metrics-jersey2>4.1.25</metrics-jersey2>
+        <metrics-jetty9>4.1.25</metrics-jetty9>
+        <metrics-servlets.version>4.1.25</metrics-servlets.version>
 
         <!-- Versions for provided dependencies -->
 
@@ -85,6 +85,14 @@
             <artifactId>dropwizard-client</artifactId>
             <version>${dropwizard.version}</version>
             <exclusions>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
                 <exclusion>
                     <groupId>org.apache.commons</groupId>
                     <artifactId>commons-lang3</artifactId>
