--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -47,7 +47,7 @@ jobs:
         restore-keys: ${{ runner.os }}-m2
 
     - name: Delombok
-      uses: sleberknight/delombok-action@main
+      uses: sleberknight/delombok-action@v0.5.0
 
     - name: Autobuild
       uses: github/codeql-action/autobuild@v2
